# nano-ktrans

./: .gitignore  EXPERT_MIGRATION_EVICTION.md  PROJECT_OVERVIEW.md  README.md  __init__.py  agent.md  example.py  pyproject.toml  report-20260508-pim-moe-advisor-briefing.md  summary-20260507-m28-fiddler-cost-model-and-bg-preload-NEGATIVE.md  summary-20260507-pim-moe-decode-optimization-report.md  summary-20260508-m30-expert-parallel-POSITIVE.md
.codebuddy/dev_gate/: M-1.toml  M-10.toml  M-11.toml  M-12.toml  M-13.toml  M-14.toml  M-15.toml  M-16.toml  M-17.2.toml  M-17.3.toml  M-17.4.toml  M-17.5.toml  M-17.6.toml  M-17.toml  M-18.toml  M-2.toml  M-21.toml  M-23.toml  M-3.toml  M-4.toml  M-5.toml  M-6.toml  M-7.toml  M-8.toml  M-9.toml  README.md
.knowledge/: INDEX.md
.knowledge/architecture/: _INDEX.md  overview.md
.knowledge/context/: _INDEX.md  (+4 more)
benchmarks/: README.md  analyze_calibration_generalisation.py  benchmark_inference.py  benchmark_pim_shape_sweep.py  benchmark_quant_matvec.py  benchmark_residency_sweep.py  diag_m27_per_phase.py  diag_m27_preload_breakdown.py  diag_m27_submit_breakdown.py  diag_m28_cost_model.py  m23_calibration_prompts.json  profile_expert_routing.py
docs/: PIM_GUIDE.md
engine/: simple_engine.py
kernels/: __init__.py  cpu_infer.py  cpu_moe.py  weight_loader.py
layers/: attention.py  hybrid_moe.py  rotary_embedding.py
nano_ktrans/: __init__.py  llm.py
scripts/: dev_gate.py  download_qwen3_moe.py  start_qwen3_download_tmux.sh
tests/: test_core.py  test_dev_gate.py  test_pim_c_async.py  test_pim_c_fused.py  test_pim_runtime.py  test_quantized_ops.py  test_smoke_cpu.py
utils/: __init__.py  context.py  loader.py
(+185 files in other folders)
