[project]
name = "nano-ktrans"
version = "0.1.0"
description = "A minimal, educational CPU/GPU Hybrid MoE inference framework, simplified from KTransformers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "torch==2.4.0",
    "triton>=2.1.0",
    "flash-attn==2.6.3",
    "transformers>=4.36.0",
    "safetensors>=0.4.0",
    "kt-kernel",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.4.0", "setuptools", "wheel"]
