[project]
name = "nano-ktrans"
version = "0.3.0-rc1"
description = "A minimal, educational CPU/GPU/PIM Hybrid MoE inference framework, simplified from KTransformers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.36.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.23.0",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
accel = [
    "triton>=2.1.0",
    "flash-attn==2.6.3",
    "kt-kernel",
]
cuda = [
    "triton>=2.1.0",
    "flash-attn==2.6.3",
]
cpu-kernel = [
    "kt-kernel",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.4.0", "setuptools", "wheel"]
